# space-simulator

./: .gitignore  CMakeLists.txt  README.md  space-simulator.sln
include/graphics/: Renderer.h
include/input/: InputManager.h
include/physics/: GravitySystem.h  IIntegrator.h  IPhysicsModel.h  VelocityVerlet.h
include/simulation/: SimulationEngine.h  SpaceObject.h  Vector3D.h
space-simulator/x64/Debug/: space-simulator.exe.recipe  vc143.idb
space-simulator/x64/Debug/space-simulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  space-simulator.lastbuildstate
src/: main.cpp
src/graphics/: CMakeLists.txt  Renderer.cpp
src/input/: CMakeLists.txt  InputManager.cpp
src/physics/: CMakeLists.txt  GravitySystem.cpp  VelocityVerlet.cpp
src/simulation/: CMakeLists.txt  SimulationEngine.cpp  SpaceObject.cpp
tests/: CmakeLists.txt  GravitySystem_test.cpp  SimulationEngine_test.cpp  SpaceObject_test.cpp  Vector3D_test.cpp  pch.h
